feat(ai): ground answers in Lex.uz and stabilize live voice